feat: add login docs
