# openapi.yaml
@@ -12,6 +12,51 @@ info:
       - 음성 인식과 GPT를 통한 대화
   version: 1.0.0
 paths:
+  /login:
+    post:
+      description: 로그인을 진행합니다.
+      requestBody:
+        description: 로그인을 위한 사용자 입력 정보 입니다.
+        required: true
+        content: 
+          application/json:
+            example:
+              id: admin
+              password: admin123
+            schema:
+              type: object
+              required:
+                - id
+                - password
+              properties:
+                id:
+                  description: 아이디
+                  type: string
+                password:
+                  description: 비밀번호
+                  type: string
+      responses:
+        200:
+          description: 로그인 결과
+          content:
+            application/json:
+              examples:
+                success:
+                  description: 로그인 성공
+                  value: 
+                    success: true
+                fail:
+                  description: 로그인 실패
+                  value:
+                    success: false
+              schema:
+                type: object
+                required:
+                  - success
+                properties:
+                  success:
+                    description: 처리 성공 여부
+                    type: boolean
   /cv/cv.jpg:
     get:
       description: AI 서버로 부터 받은 M-JPEG 스트림을 반환합니다.
